# Legacy

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  README.md  check_branch.sh  docker-compose.yml  docker-manage.sh  gwclogs  legacy.sh  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  test_bid_docker.db  test_simple.gw
.github/workflows/: Branch_rule_enforcement.yml  Mirror.yml  Tests.yml
ansible/: .gitignore  README.md  ansible.cfg  deploy.yml  inventory.yml  vault_pass.txt
docs/: ACCESSIBILITY.md  ANSIBLE.md  COVERAGE_UPDATE.md  DATABASE.md  DOCKER.md  DOCKER_QUICKREF.md  DUMMY_PERSONS.md  GOLDEN MASTER.md  GOLDEN_MASTER.md  GWC_IMPLEMENTATION.md  GWC_PYTHON.md  GW_CONVERTER_DUMMIES.md  GW_PARSER_TEST_COVERAGE.md  MIGRATION_GUIDE.md  OCAML_TO_PYTHON.md  QUALITY INSURANCE.md  QUALITY_INSURANCE.md  README.md  TECHNOLOGIES.md  TESTING_POLICY.md
docs/tests/: E2E.md  (+4 more)
src/: wserver.py
test_assets/: big.gw  medium.gw  minimal.gw
tests/: test_a.py  test_add_family.py  test_base.py  test_calendar.py  test_cdate.py  test_consanguinity_rate.py  test_converter_from_db.py  test_converter_to_db.py  test_database.py  test_date.py  test_date_value.py  test_death.py  test_events.py  test_family.py  test_google.py  test_gw_converter.py  test_gwd_root_impl.py  test_gwsetup.py  test_name_utils.py  test_name_utils_2.py  test_person.py  test_secure_string.py  test_sosa.py  test_template_loader.py  test_title.py  test_translations.py  test_translator.py  tests_consanguinity_rate.py
tools/: convert_template.py  export_database_schema.py
(+211 files in other folders)
