[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "GenewebPy"
version = "0.1.0"

[tool.setuptools.packages.find]
where = ["src"]

[tool.autopep8]
max_line_length = 79
aggressive = 1

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "golden_master: mark a test as a golden master test"
]
